--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   http: ^1.2.2
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
